@@ -52,6 +52,15 @@ unencrypted, from being executed in the new encrypted state of the session.
 
 =item *
 
+Fixed a regression that occurred in S<INN 2.5.0> when leading whitespace
+have been made significant in header field bodies.  It could lead INN to
+drop articles and throttle itself when running as a slave because Xref:
+header fields generated by other news servers, or even S<INN 2.4.6>,
+could contain (valid) leading whitespace.  Thanks to Matija Nalis for
+having caught this bug.
+
+=item *
+
 It is now possible to properly generate daily statistics with B<sendinpaths>
 thanks to the new B<-k> and B<-r> flags that permit to control the interval
 of days for processing dump files.  The new B<-c> flag permits to send a
